# Arc

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml
engineering/: openai-proxy-v0-report.md  pricing-v0-report.md  runtime-plugin-contract.md
engineering/plans/: 2026-04-26-foundation-scaffold.md  2026-04-26-ingest-query-loop.md  2026-04-26-run-detail-data-loop.md  2026-04-27-auth-api-key-v0.md  2026-04-27-claude-agent-sdk-plugin.md  2026-04-27-clickhouse-persistence.md  2026-04-27-langgraph-plugin.md  2026-04-27-pricing-v0.md  2026-04-28-openai-proxy-v0.md
infra/: README.md  docker-compose.dev.yml
infra/clickhouse/: 001_runs_spans_events.sql  README.md
infra/postgres/: 001_metadata.sql  README.md
infra/redis/: README.md
scripts/: smoke_clickhouse_persistence.py  smoke_ingest.py  smoke_openai_proxy.py
services/api/: README.md  pyproject.toml
services/api/src/opscanvas_api/: __init__.py  app.py  auth.py  openai_proxy.py  settings.py  storage.py  store.py
services/api/src/opscanvas_api/routes/: health.py  ingest.py  openai_proxy.py  runs.py
services/api/tests/: factories.py  test_auth.py  test_auth_routes.py  test_clickhouse_store.py  test_health.py  test_ingest.py  test_openai_proxy_helpers.py  test_openai_proxy_route.py  test_openai_proxy_settings.py  test_runs.py  test_smoke_clickhouse_persistence.py  test_storage.py
web/: README.md  next.config.ts  package.json  tsconfig.json
web/app/: JsonView.tsx  ResizablePanels.tsx  RunTable.tsx  Sidebar.tsx  SpanDetail.tsx  SpanWaterfall.tsx  StatusDot.tsx  data.ts  (+9 more)
