[project]
name = "arc-workspace"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "ruff>=0.14.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/opscanvas-core",
    "packages/opscanvas-agents",
    "packages/opscanvas-claude",
    "services/api",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
