[project]
name = "opscanvas-api"
version = "0.1.0"
description = "FastAPI service boundary for OpsCanvas ingest and query APIs."
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=0.15.1",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "opscanvas-core",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opscanvas_api"]

[tool.uv.sources]
opscanvas-core = { workspace = true }
